@@ -1,15 +1,15 @@
 package javaposse.jobdsl.dsl.helpers
 
+import javaposse.jobdsl.dsl.JobType
 import javaposse.jobdsl.dsl.WithXmlAction
 import javaposse.jobdsl.dsl.WithXmlActionSpec
-import javaposse.jobdsl.dsl.helpers.StepContextHelper.StepContext
 import spock.lang.Specification
 
 public class StepHelperSpec extends Specification {
 
     List<WithXmlAction> mockActions = Mock()
-    StepContextHelper helper = new StepContextHelper(mockActions)
-    StepContext context = new StepContext()
+    StepContextHelper helper = new StepContextHelper(mockActions, JobType.Freeform)
+    StepContext context = new StepContext(JobType.Freeform)
 
     def 'call shell method'() {
         when:
@@ -457,6 +457,138 @@ public class StepHelperSpec extends Specification {
         selectorNode6.parameterName[0].value() == 'BUILD_PARAM'
     }
 
+    def 'call phases with minimal arguments'() {
+        when:
+        context.phase('First')
+
+        then:
+        def phaseNode = context.stepNodes[0]
+        phaseNode.name() == 'com.tikal.jenkins.plugins.multijob.MultiJobBuilder'
+        phaseNode.phaseName[0].value() == 'First'
+        phaseNode.continuationCondition[0].value() == 'SUCCESSFUL'
+
+        when:
+        context.phase() {
+            phaseName 'Second'
+            job('JobA')
+        }
+
+        then:
+        def phaseNode2 = context.stepNodes[1]
+        phaseNode2.phaseName[0].value() == 'Second'
+        def jobNode = phaseNode2.phaseJobs[0].'com.tikal.jenkins.plugins.multijob.PhaseJobsConfig'[0]
+        jobNode.jobName[0].value() == 'JobA'
+        jobNode.currParams[0].value() == 'true'
+        jobNode.exposedSCM[0].value() == 'true'
+        jobNode.configs[0].attribute('class') == 'java.util.Collections$EmptyList'
+    }
+
+    def 'call phases with multiple jobs'() {
+        when:
+        context.phase('Third') {
+            job('JobA')
+            job('JobB')
+            job('JobC')
+        }
+
+        then:
+        def phaseNode = context.stepNodes[0]
+        def jobNodeA = phaseNode.phaseJobs[0].'com.tikal.jenkins.plugins.multijob.PhaseJobsConfig'[0]
+        jobNodeA.jobName[0].value() == 'JobA'
+        def jobNodeB = phaseNode.phaseJobs[0].'com.tikal.jenkins.plugins.multijob.PhaseJobsConfig'[1]
+        jobNodeB.jobName[0].value() == 'JobB'
+        def jobNodeC = phaseNode.phaseJobs[0].'com.tikal.jenkins.plugins.multijob.PhaseJobsConfig'[2]
+        jobNodeC.jobName[0].value() == 'JobC'
+    }
+
+    def 'call phases with jobs with complex parameters'() {
+        when:
+        context.phase('Fourth') {
+            job('JobA', false, true) {
+                boolParam('aParam')
+                boolParam('bParam', false)
+                boolParam('cParam', true)
+                fileParam('my.properties')
+                sameNode()
+                matrixParam('it.name=="hello"')
+                subversionRevision()
+                gitRevision()
+                prop('prop1', 'value1')
+                prop('prop2', 'value2')
+                props([
+                        prop3: 'value3',
+                        prop4: 'value4'
+                ])
+            }
+        }
+
+        then:
+        def phaseNode = context.stepNodes[0]
+        def jobNode = phaseNode.phaseJobs[0].'com.tikal.jenkins.plugins.multijob.PhaseJobsConfig'[0]
+        jobNode.currParams[0].value() == 'false'
+        jobNode.exposedSCM[0].value() == 'true'
+        def configsNode = jobNode.configs[0]
+        def boolParams = configsNode.'hudson.plugins.parameterizedtrigger.BooleanParameters'[0].configs[0]
+        boolParams.children().size() == 3
+        def boolNode = boolParams.'hudson.plugins.parameterizedtrigger.BooleanParameterConfig'[0]
+        boolNode.name[0].value() == 'aParam'
+        boolNode.value[0].value() == 'false'
+        def boolNode1 = boolParams.'hudson.plugins.parameterizedtrigger.BooleanParameterConfig'[1]
+        boolNode1.name[0].value() == 'bParam'
+        boolNode1.value[0].value() == 'false'
+        def boolNode2 = boolParams.'hudson.plugins.parameterizedtrigger.BooleanParameterConfig'[2]
+        boolNode2.name[0].value() == 'cParam'
+        boolNode2.value[0].value() == 'true'
+
+        def fileNode = configsNode.'hudson.plugins.parameterizedtrigger.FileBuildParameters'[0]
+        fileNode.propertiesFile[0].value() == 'my.properties'
+        fileNode.failTriggerOnMissing[0].value() == 'false'
+
+        def nodeNode = configsNode.'hudson.plugins.parameterizedtrigger.NodeParameters'[0]
+        nodeNode != null
+
+        def matrixNode = configsNode.'hudson.plugins.parameterizedtrigger.matrix.MatrixSubsetBuildParameters'[0]
+        matrixNode.filter[0].value() == 'it.name=="hello"'
+
+        def svnNode = configsNode.'hudson.plugins.parameterizedtrigger.SubversionRevisionBuildParameters'[0]
+        svnNode.includeUpstreamParameters[0].value() == 'false'
+
+        def gitNode = configsNode.'hudson.plugins.git.GitRevisionBuildParameters'[0]
+        gitNode.combineQueuedCommits[0].value() == 'false'
+
+        def propNode = configsNode.'hudson.plugins.parameterizedtrigger.PredefinedBuildParameters'[0]
+        def propStr = propNode.'properties'[0].value()
+        propStr.contains('prop1=value1')
+        propStr.contains('prop2=value2')
+        propStr.contains('prop3=value3')
+        propStr.contains('prop4=value4')
+    }
+
+
+    def 'call phases with multiple calls'() {
+        when:
+        context.phase('Third') {
+            job('JobA') {
+                fileParam('my1.properties')
+                fileParam('my2.properties')
+            }
+        }
+
+        then:
+        thrown(IllegalStateException)
+
+        when:
+        context.phase('Third') {
+            job('JobA') {
+                matrixParam('it.size=2')
+                matrixParam('it.size=3')
+            }
+        }
+
+        then:
+        thrown(IllegalStateException)
+    }
+
     def 'call step via helper'() {
         when:
         helper.steps {
@@ -484,7 +616,7 @@ public class StepHelperSpec extends Specification {
         }
 
         when:
-        def withXmlAction = helper.generateWithXmlAction(new StepContext([stepNode]))
+        def withXmlAction = helper.generateWithXmlAction(new StepContext([stepNode], JobType.Freeform))
         withXmlAction.execute(root)
 
         then:
@@ -494,12 +626,62 @@ public class StepHelperSpec extends Specification {
     def 'no steps for Maven jobs'() {
         setup:
         List<WithXmlAction> mockActions = Mock()
-        StepContextHelper helper = new StepContextHelper(mockActions, [type: 'maven'])
+        StepContextHelper helper = new StepContextHelper(mockActions, JobType.Maven)
 
         when:
         helper.steps {}
 
         then:
         thrown(IllegalStateException)
+    }
+
+    def 'call sbt method minimal'() {
+        when:
+        context.sbt('SBT 0.12.3')
+
+        then:
+        context.stepNodes != null
+        context.stepNodes.size() == 1
+        def sbtStep = context.stepNodes[0]
+        sbtStep.name() == 'org.jvnet.hudson.plugins.SbtPluginBuilder'
+        sbtStep.attribute('plugin') == 'sbt@1.4'
+        sbtStep.name[0].value() == 'SBT 0.12.3'
+        sbtStep.jvmFlags[0].value() == ''
+        sbtStep.sbtFlags[0].value() == ''
+        sbtStep.actions[0].value() == ''
+        sbtStep.subdirPath[0].value() == ''
+    }
+
+    def 'call sbt method action only'() {
+        when:
+        context.sbt('SBT 0.12.3', 'test')
+
+        then:
+        context.stepNodes != null
+        context.stepNodes.size() == 1
+        def sbtStep = context.stepNodes[0]
+        sbtStep.name() == 'org.jvnet.hudson.plugins.SbtPluginBuilder'
+        sbtStep.attribute('plugin') == 'sbt@1.4'
+        sbtStep.name[0].value() == 'SBT 0.12.3'
+        sbtStep.jvmFlags[0].value() == ''
+        sbtStep.sbtFlags[0].value() == ''
+        sbtStep.actions[0].value() == 'test'
+        sbtStep.subdirPath[0].value() == ''
+    }
+    def 'call sbt method full'() {
+        when:
+        context.sbt('SBT 0.12.3','test', '-Dsbt.log.noformat=true',  '-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512M -Dfile.encoding=UTF-8 -Xmx2G -Xms512M', 'subproject')
+
+        then:
+        context.stepNodes != null
+        context.stepNodes.size() == 1
+        def sbtStep = context.stepNodes[0]
+        sbtStep.name() == 'org.jvnet.hudson.plugins.SbtPluginBuilder'
+        sbtStep.attribute('plugin') == 'sbt@1.4'
+        sbtStep.name[0].value() == 'SBT 0.12.3'
+        sbtStep.jvmFlags[0].value() == '-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512M -Dfile.encoding=UTF-8 -Xmx2G -Xms512M'
+        sbtStep.sbtFlags[0].value() == '-Dsbt.log.noformat=true'
+        sbtStep.actions[0].value() == 'test'
+        sbtStep.subdirPath[0].value() == 'subproject'
     }
 }
